[package]
name = "chain"
version = "0.1.0"
authors = [ "debris <marek.kotewicz@gmail.com> & Chainpool <http://chainx.org>" ]

[dependencies]
rustc-hex = { version = "2", optional = true }
heapsize = { version = "0.4", optional = true }
bitcrypto = { path = "../crypto", default-features = false }
primitives = { path = "../primitives", default-features = false }
serialization = { path = "../serialization", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", rev="a2ae6562d47ca7547a951fb3b22612a63c884ac1", default-features = false }
parity-codec = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = [
    "rustc-hex",
    "heapsize",
    "bitcrypto/std",
    "primitives/std",
    "serialization/std",
    "sr-std/std",
    "parity-codec/std",
]
