[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
sr-std = { git = "https://github.com/chainx-org/sr-std", default-features = false }
rand = { version = "0.4", optional = true }
rustc-hex = { version = "2", optional = true }
base58 = { version = "0.1", optional = true }
eth-secp256k1 = { git = "https://github.com/chainx-org/rust-secp256k1", default-features = false }
bitcrypto = { path = "../crypto", default-features = false }
primitives = { path = "../primitives", default-features = false }
parity-codec = { version = "2.0", default-features = false }
parity-codec-derive = { version = "2.0", default-features = false }
serde_bytes = { git = "https://github.com/serde-rs/bytes", optional = true }
serialization = { path = "../serialization", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
[features]
default = ["std"]
std = [
    "sr-std/std",
    "rand",
    "rustc-hex",
    "base58",
    "eth-secp256k1/std",
    "bitcrypto/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "primitives/std",
    "serde_bytes",
    "serde_derive",
    "serde/std"
]
