[package]
name = "primitives"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> chainpool & <http://chainx.org>"]

[dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
heapsize = { version = "0.4", optional = true }
rustc-hex = { version = "2.0", default-features = false }
byteorder = { version = "1", default-features = false }
void = { version = "1", default-features = false }
parity-codec = { git = "https://github.com/paritytech/parity-codec", default-features = false }

[features]
default = ["std"]
std = [
    "substrate-primitives/std",
    "rustc-hex/std",
    "sr-std/std",
    "heapsize",
    "byteorder/std",
    "parity-codec/std",
    "void/std",
]
