[package]
name = "primitives"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> chainpool & <http://chainx.org>"]

[dependencies]
crunchy = "0.2"
sr-std = { git = "https://github.com/chainx-org/sr-std", default-features = false }
heapsize = { version = "0.4", optional = true }
rustc-hex = { version = "2.0", default-features = false }
byteorder = { version = "1", default-features = false }
void = { version = "1", default-features = false }
parity-codec = { version = "3.0", default-features = false }
uint = { version = "0.5", default-features = false }

[features]
default = ["std"]
std = [
    "uint/std",
    "rustc-hex/std",
    "sr-std/std",
    "heapsize",
    "byteorder/std",
    "parity-codec/std",
    "void/std",
]
