[package]
name = "serialization"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> & chainpool <http://chainx.org>"]

[dependencies]
byteorder = { version = "1", default-features = false }
primitives = { path = "../primitives", default-features = false }
sr-std = { git = "https://github.com/chainx-org/sr-std", default-features = false }

[features]
default = ["std"]
std = [ "byteorder/std", "primitives/std", "sr-std/std"]
